[gd_scene load_steps=6 format=3 uid="uid://cg07od16el00b"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_4kmw0"]
[ext_resource type="FontFile" uid="uid://cxeg4c7rwp2y3" path="res://assets/fonts/lowrez/lowrez.png" id="1_f5yel"]
[ext_resource type="Texture2D" uid="uid://d032n0mrd7o6j" path="res://assets/img/heart_full.png" id="2_428of"]

[sub_resource type="Animation" id="Animation_aulqy"]
resource_name = "banner"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Banner:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(84, 16), Vector2(0, 16), Vector2(0, 16), Vector2(-84, 16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3gukj"]
_data = {
"banner": SubResource("Animation_aulqy")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_4kmw0")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 1.0
offset_top = 43.0
offset_right = 48.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_f5yel")
text = "0123456789"

[node name="Hearts" type="Node2D" parent="."]

[node name="Heart1" type="Sprite2D" parent="Hearts"]
position = Vector2(66, 43)
texture = ExtResource("2_428of")
centered = false

[node name="Heart2" type="Sprite2D" parent="Hearts"]
position = Vector2(72, 43)
texture = ExtResource("2_428of")
centered = false

[node name="Heart3" type="Sprite2D" parent="Hearts"]
position = Vector2(78, 43)
texture = ExtResource("2_428of")
centered = false

[node name="Banner" type="ColorRect" parent="."]
offset_left = 84.0
offset_top = 16.0
offset_right = 168.0
offset_bottom = 32.0
color = Color(0, 0, 0, 1)

[node name="BannerLabel" type="Label" parent="Banner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -8.0
offset_right = 40.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "TEXT HERE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BannerAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3gukj")
}
